Add title screen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,9 +25,14 @@ file(COPY src/junkdragon.json src/junkdragon.png DESTINATION ${CMAKE_CURRENT_BIN
 file(COPY src/junkdragon.json src/junkdragon.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Release)
 file(COPY src/junkdragon.json src/junkdragon.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
-file(COPY assets/background.png assets/wall.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Debug)
-file(COPY assets/background.png assets/wall.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Release)
-file(COPY assets/background.png assets/wall.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY src/junkdragon_title.json src/junkdragon_title.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Debug)
+file(COPY src/junkdragon_title.json src/junkdragon_title.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Release)
+file(COPY src/junkdragon_title.json src/junkdragon_title.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
+
+file(COPY assets/background.png assets/wall.png assets/play.png assets/play_hatch.png  DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Debug)
+file(COPY assets/background.png assets/wall.png assets/play.png assets/play_hatch.png  DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Release)
+file(COPY assets/background.png assets/wall.png assets/play.png assets/play_hatch.png  DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 file(COPY src/level0.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Debug)
 file(COPY src/level0.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Release)
