--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,9 +34,9 @@ file(COPY src/junkdragon_endgame.json src/junkdragon_endgame.png DESTINATION ${C
 file(COPY src/junkdragon_endgame.json src/junkdragon_endgame.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 
-file(COPY assets/background.png assets/wall.png  DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Debug)
-file(COPY assets/background.png assets/wall.png  DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Release)
-file(COPY assets/background.png assets/wall.png  DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY assets/background.png assets/wall.png assets/play.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Debug)
+file(COPY assets/background.png assets/wall.png assets/play.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Release)
+file(COPY assets/background.png assets/wall.png assets/play.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
 file(COPY src/level1.json src/level2.json src/level3.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Debug)
 file(COPY src/level1.json src/level2.json src/level3.json DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Release)
